<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetialActivity">
    <ImageView
        android:layout_alignParentRight="true"
        android:id="@+id/clear"
        android:layout_width="30dp"
        android:layout_height="30dp"/>
    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_below="@+id/clear"
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_mov_title"
            android:layout_marginLeft="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/black"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/txt_show_time"
            android:layout_marginLeft="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_mov_title"
            android:layout_marginTop="15dp"
            android:text="@string/fanta"
            android:textColor="@color/white" />
        <LinearLayout
            android:id="@+id/ll_movie_rate"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_below="@+id/txt_show_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_weight="1"
                android:text="@string/decimal"
                android:id="@+id/rate_decimal"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_weight="1"
                android:text="@string/percent1"
                android:id="@+id/txt_percent1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_weight="1"
                android:text="@string/percent2"
                android:id="@+id/txt_percent2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_movie_rate_name"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_below="@+id/ll_movie_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_weight="1"
                android:text="@string/imdb"
                android:id="@+id/txt_imdb"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_weight="1"
                android:text="@string/percent1"
                android:id="@+id/txt_rotten"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_weight="1"
                android:text="@string/percent2"
                android:id="@+id/txt_most"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ticket_buy_btn"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <VideoView
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/image1"
        android:layout_below="@+id/rl_title"
        android:id="@+id/video_sample"
        android:layout_width="300dp"
        android:layout_height="150dp"/>
    <TextView
        android:layout_margin="20dp"
        android:text="@string/paragraph"
        android:layout_below="@+id/video_sample"
        android:id="@+id/txt_descriptoion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txt_descriptoion"
        android:text="@string/read"
        android:id="@+id/txt_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_toEndOf="@+id/txt_read"
        android:layout_below="@+id/txt_descriptoion"
        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:id="@+id/ll_buy_ticket"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_below="@+id/txt_read"
        android:background="@drawable/round"
        android:layout_width="200dp"
        android:layout_height="50dp">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:text="@string/buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/ll_buy_ticket"
        android:id="@+id/detail_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>