<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/card_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/movie_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/image1" />
    </com.google.android.material.card.MaterialCardView>

    <RelativeLayout
        android:layout_marginTop="5dp"
        android:layout_below="@+id/card_img"
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="120dp"
            android:textSize="10dp"
            android:id="@+id/txt_mov_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/black"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/txt_show_time"
            android:layout_marginLeft="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_mov_title"
            android:layout_marginTop="5dp"
            android:text="@string/fanta"
            android:textColor="@color/white" />
        <LinearLayout
            android:id="@+id/ll_movie_rate"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_below="@+id/txt_show_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_weight="1"
                android:text="@string/decimal"
                android:id="@+id/rate_decimal"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_weight="1"
                android:text="@string/percent1"
                android:id="@+id/txt_percent1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_weight="1"
                android:text="@string/percent2"
                android:id="@+id/txt_percent2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_movie_rate_name"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_below="@+id/ll_movie_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_weight="1"
                android:text="@string/imdb"
                android:id="@+id/txt_imdb"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_weight="1"
                android:text="@string/percent1"
                android:id="@+id/txt_rotten"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_weight="1"
                android:text="@string/percent2"
                android:id="@+id/txt_most"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ticket_buy_btn"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:layout_below="@+id/ll_movie_rate_name"
            android:background="@drawable/round"
            android:layout_width="200dp"
            android:layout_height="50dp">
            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textSize="15dp"
                android:textColor="@color/white"
                android:text="@string/buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <ImageView
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:layout_marginTop="5dp"
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ticket_buy_btn"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>
</androidx.core.widget.NestedScrollView>